added coredns integration
